# displaylight_rs

./: .gitignore  Cargo.toml  README.md
desktop/: Cargo.toml
desktop/src/: interface.rs  lib.rs  linux.rs  main.rs
desktop/src/linux/: X11.rs  linux.rs  shm.rs
desktop_frame/: Cargo.toml
desktop_frame/src/: interface.rs  lib.rs  main.rs  raster_image.rs  tracked_image.rs
desktop_frame/src/linux/: X11.rs  linux.rs
desktop_frame/src/windows/: windows.rs
displaylight/: Cargo.toml  run.bat  run.sh
displaylight/.cargo/: config.toml
displaylight/config/: linux.yaml  windows.yaml
displaylight/src/: analyzer.rs  border_detection.rs  lib.rs  main.rs  rate_limiter.rs  rectangle.rs  sampler.rs  test_util.rs  zones.rs
firmware/: Cargo.toml  README.md  openocd.cfg  openocd.gdb
firmware/.cargo/: config.toml
firmware/src/: clock.rs  gamma.rs  lib.rs  lights.rs  main.rs  ringbuffer.rs  serial.rs  spi_ws2811.rs  spi_ws2811_util.rs  spsc.rs  string.rs  types.rs
lights/: Cargo.toml
lights/src/: lib.rs  main.rs  messages.rs
lights/src/message_check/: Makefile  main.cpp  messages.h
screen_capture/: Cargo.toml
screen_capture/src/: interface.rs  lib.rs  main.rs  raster_image.rs
screen_capture/src/linux/: X11.rs  linux.rs  shm.rs
screen_capture/src/windows/: windows.rs
