[workspace]
resolver = "2"
members = ["displaylight", "lights", "firmware"]

[workspace.dependencies]
screen_capture = { git = "https://github.com/iwanders/screen_capture", rev = "5da4468f522b5846e62fec872f2a89cb40194617" }

[profile.release]
opt-level = 3

[profile.firmware]
#opt-level = "z"
#opt-level = 3
inherits = "release"
incremental = false
codegen-units = 1
debug = true
lto = true
