[workspace]
resolver = "2"
members = ["displaylight", "lights", "firmware"]

[workspace.dependencies]
screen_capture = { git = "https://github.com/iwanders/screen_capture", rev = "91e2d4e1f30cce530949a4fcdfb67d5817117072" }

[profile.release]
opt-level = 3

[profile.firmware]
#opt-level = "z"
#opt-level = 3
inherits = "release"
incremental = false
codegen-units = 1
debug = true
lto = true
