[workspace]
resolver = "2"
members = ["displaylight", "lights", "firmware"]

[workspace.dependencies]
screen_capture = { git = "https://github.com/iwanders/screen_capture", rev = "50c56ced33cb8248d4a9c1a0fb36afa77c765bdb" }

[profile.release]
opt-level = 3

[profile.firmware]
#opt-level = "z"
#opt-level = 3
inherits = "release"
incremental = false
codegen-units = 1
debug = true
lto = true
