[package]
name = "displaylight"
version = "0.0.0"
edition = "2021"
authors = ["Ivor Wanders <ivor@iwanders.net>"]
license = "MIT OR Apache-2.0"

[dependencies]


screen_capture = { workspace = true }

lights = { path = "../lights" }
clap = "2.34.0"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
