[package]
name = "screen_capture"
version = "0.0.0"
edition = "2021"
authors = ["Ivor Wanders <ivor@iwanders.net>"]
license = "MIT OR Apache-2.0"


[target.'cfg(unix)'.dependencies]
libc = "0.2.112"

[target.'cfg(windows)'.dependencies.windows]
version = "0.29.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_Foundation",
]